# glam-maps

./: .gitignore  README.md  docker-compose.yml  justfile
.claude/: CLAUDE.md
backend/: Dockerfile  README.md  main.py  pyproject.toml
backend/app/: main.py
backend/app/api/: __init__.py  checkpoints.py  glam_score.py  health.py  routes.py
backend/app/core/: config.py  database.py  logger.py
backend/app/models/: models.py
backend/app/schemas/: schemas.py
backend/app/services/: messages.py  potholes.py  routing.py
backend/glam_api/auth/: wa.py
backend/glam_api/db/: models.py  session.py
backend/glam_api/jobs/: overpass.py
backend/glam_api/providers/: precomputed.py
backend/glam_api/wa/: webhook.py
backend/migrations/: env.py
backend/migrations/versions/: 001_initial.py
backend/seed/: complaints.json  seed_potholes.py  seed_waypoints.py  test_traffic.py  waypoints.json
data/routes/: bengaluru.json
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/passport/: page.tsx
frontend/app/road-report/: page.tsx
frontend/components/: CheckpointCard.tsx  DemoControls.tsx  GlamMaps.tsx  MapCanvas.tsx
frontend/components/screens/: ArrivalScreen.tsx  CookingScreen.tsx  DestinationScreen.tsx  JourneyScreen.tsx  LocationSelectScreen.tsx  (+2 more)
frontend/lib/: checkpoints.ts  commentary.ts  featuredWaypoints.ts  journeyMachine.ts  passport.ts  routeCalc.ts  routes.ts  score.ts  useFuzzyFilter.ts  waypointMeta.ts  waypoints.ts
infra/: firebase.json
v1/: .env.example
v1/backend/: Dockerfile  alembic.ini
v1/frontend/: vite.config.ts
v1/shared/: copy.json
(+41 files in other folders)
