[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["fastapi[standard]>=0.136.3", "pydantic-settings>=2.14.1"]

[dependency-groups]
dev = ["ruff>=0.15.15"]

[tool.ruff]
target-version = "py311"

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint]
extend-select = ["I"]
